# QEC-decoders

./: .gitignore  7x7Network.ipynb  CMakeLists.txt  README.md  create_model.py  functions.cpp  functions.hpp  main.cpp  main.hpp  requirements.txt  srcL=7,P=(01,00),n=5120,9.out
211/: simulate  submission.script
211_fast/: 211 fast Results.nb  functions.cpp  main.cpp  simulate  submission.script  thread_for.hpp
2D/: Makefile  main.cpp  simulate  submission.script
2Da/: Makefile  functions.cpp  functions.hpp  main.cpp  main.hpp  simulate  submission.script
311/: main.cpp  submission.script
311_fast/: main.cpp  simulate  submission.script
3D/: Makefile  main.cpp  simulate  submission.script
3D_fast/: Results.nb  main.cpp  simulate  submission.script  thread_for.hpp
3D_loss_fast/: bsub.script  functions.cpp  functions.hpp  main.cpp  simulate  submission.script
422/: Makefile  test.sh
422_fast/: L=3,P=(10,50),n=1PLANE,EM2.out  Makefile  functions.cpp  functions.hpp  main.cpp  simulate  submission.script  thread_for.hpp
Classical decoders/: Makefile
CppflowTest/: main.cpp  main.out
ML/: create_model.py  functions.cpp  functions.hpp  main.cpp  main.hpp  simulate
ML2D/: Makefile  create_model h.py  create_model.py  main.cpp  requirements.txt  simulate  submission_sherlock.script  train.script
ML3D/: L=3,P=(00,40),n=1000TORUS,INDEP.out  Makefile  create_model.py  functions.cpp  functions.hpp  main.cpp  main.hpp  requirements.txt  simulate  submission.script  train.script
TFtest/: hello_tf
classical-decoders/: Concat_Hamming.cpp  concat_hamming.py
plane_concat/: main.cpp  simulate  subfunctions.hpp  submain.hpp  submission.script
plane_fast/: functions.cpp  functions.hpp  subfunctions.cpp  submain.cpp
shor_concat/: functions.hpp  simulate  submission.script
shor_fast/: Makefile  Shor fast Results.nb  functions.cpp  main.cpp
src/: cluster.cpp  cluster.hpp  coord.cpp  coord.hpp  functions.cpp  (+5 more)
(+9200 files in other folders)
